added use case for fetching all user's books
